k8s/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: awaves-dev
  labels:
    app: web-app
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
